trybuild_tests/runtime/u0_cannot_call_expose_secret.stderr
error[E0599]: the method `expose_secret` exists for struct `RTSecret<isize, UTerm>`, but its trait bounds were not satisfied
  --> trybuild_tests/runtime/u0_cannot_call_expose_secret.rs:11:28
   |
11 |           let _ = secret_one.expose_secret(|exposed_secret| {
   |                   -----------^^^^^^^^^^^^^ method cannot be called on `RTSecret<isize, UTerm>` due to unsatisfied trait bounds
   |
  ::: $CARGO/typenum-1.17.0/src/uint.rs
   |
   |   pub struct UTerm;
   |   ---------------- doesn't satisfy `<UTerm as IsGreater>::Output = B1`
   |
  ::: src/runtime/secret.rs
   |
   | / pub struct RTSecret<
   | |     #[cfg(feature = "zeroize")] T: Zeroize,
   | |     #[cfg(not(feature = "zeroize"))] T,
   | |     MEC: ChooseMinimallyRepresentableUInt,
   | | >(T, Cell<<MEC as ChooseMinimallyRepresentableUInt>::Output>);
   | |_- doesn't satisfy `_: RTExposeSecret<'_, &isize, UTerm>`
   |
   = note: the following trait bounds were not satisfied:
           `<UTerm as IsGreater>::Output = B1`
           which is required by `RTSecret<isize, UTerm>: RTExposeSecret<'_, &isize, UTerm>`
